# Recipe

./: README.md
backend/: pyproject.toml  run.sh
backend/recipe/: main.py  mock.py
backend/recipe/api/: router.py
backend/recipe/api/v1/: recipe.py
frontend/: package-lock.json
